# deep-learning-labs

./: README.md  best_model.pt  best_state.pt  config.py  preprocess.ipynb  pyproject.toml  requirements.txt  train.py
data/: preprocess.ipynb
data/ready/: ready.joblib
src/: config.py  functions.py  mlp.py  test.py  train.py
